Prevent line wrapping of link text [WEB-2854]

--- a/frontend/scss/molecules/_m-custom-banner.scss
+++ b/frontend/scss/molecules/_m-custom-banner.scss
@@ -260,6 +260,7 @@
                 letter-spacing: 0.0001em;
                 text-transform: none;
                 padding-top: 17px;
+                white-space: nowrap;
             }
         }
     }
